2003-07-25  Derek Price  <derek@ximbiot.com>

	* subr.c (strip_trailing_newlines): Check len b4 str[len] to avoid
	exceeding the array bounds when the string length == 0.
	(Report from John Tytgat <JoTy@esko-graphics.com>.)

2003-07-25  Derek Price  <derek@ximbiot.com>

	* subr.c (strip_trailing_newlines): Generalize this function to watch
	len so that it cannot walk past the beginning of the string passed in.
	(Report from John Tytgat <JoTy@esko-graphics.com>.)

2003-07-25  Derek Price  <derek@ximbiot.com>

	* subr.c (strip_trailing_newlines): Leave the K&R function decl on this
	branch.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* cvs.h (strip_trailing_newlines): Update prototype.
	* subr.c (strip_trailing_newlines): Return true when newlines are
	removed.
	* server.c (pserver_authenticate_connection): Don't give a DOS attack a
	chance to authenticate accidentally because I like to be paranoid.
	* sanity.sh (pserver): New test for same.

2003-07-24  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (check_system_password): Cleanup pam_* return code
	checking. (Original patch from Brian Murphy <brian@murphy.dk>.)

2003-07-24  Derek Price  <derek@ximbiot.com>

	* main.c: But the GNULIB gethostname accepts an int not ssize_t.

2003-07-24  Derek Price  <derek@ximbiot.com>

	* main.c: Don't declare gethostname when we already have it to avoid
	decl conflicts.

2003-07-24  Derek Price  <derek@ximbiot.com>

	* server.c (server_directory): Add a TRACE for OS X debugging.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* client.c: Avoid some warning from gcc -Wall.
	* lock.c: Ditto.
	* login.c: Ditto.
	* modules.c: Ditto.
	* server.c: Ditto.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* filesubr.c (isaccessible): Correct some double const warnings from
	protoize.
	* login.c (password_entry_parseline): Ditto.
	* server.c (kserver_authenticate_connection): Remove a multi-line
	string along with the warning from GCC.

2003-07-23  Derek Price  <derek@ximbiot.com>
